# smart-school-cdn

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  claude-cdn.sh  docker-compose.prod.yml  package.json  pnpm-lock.yaml  turbo.json
.husky/: pre-commit
crates/cdn-proto/: Cargo.toml  build.rs
crates/cdn-proto/proto/: dns.proto  optimizer.proto  storage.proto  tls.proto
crates/cdn-proto/src/: lib.rs
deploy/: docker-compose.yml  nginx.conf
docs/: architecture.md  development-roadmap.md  research-report.md
docs/design-system/: 01-design-tokens.md  04-components.md  05-page-patterns.md  06-feedback-states.md  09-form-patterns.md  11-dark-mode.md  index.md
docs/guides/: coding-convention.md  commit-convention.md  deploy-guide.md  playwright-e2e-guide.md  tc-guideline.md  user-guide.md
scripts/: deploy.sh  dev.sh
services/admin-server/: .dockerignore  Dockerfile  eslint.config.js  package.json
services/admin-server/src/: cors.test.ts  dns-metrics-collector.test.ts  dns-metrics-collector.ts  health-monitor.test.ts  health-monitor.ts  index.ts  stats-collector.ts
services/admin-server/src/auth/: hooks.test.ts  jwt.test.ts  jwt.ts  password.test.ts  password.ts  require-auth.ts  require-internal-token.ts
services/admin-server/src/db/: dns-metrics-repo.test.ts  dns-metrics-repo.ts  domain-repo.test.ts  domain-repo.ts  domain-stats-repo.test.ts  domain-stats-repo.ts  optimization-events-repo.test.ts  optimization-events-repo.ts  test-helper.ts  user-repo.test.ts  user-repo.ts
services/admin-server/src/db/migrations/: 003-domain-enhanced.sql  004-optimization-events.sql
services/admin-server/src/grpc/: dns_client.test.ts  dns_client.ts  optimizer_client.test.ts  optimizer_client.ts  shared.test.ts  shared.ts  storage_client.test.ts  storage_client.ts  tls_client.test.ts  tls_client.ts
services/admin-server/src/routes/: auth.test.ts  auth.ts  cache-series.test.ts  cache.test.ts  cache.ts  dns.test.ts  dns.ts  domains.test.ts  domains.ts  internal.test.ts  internal.ts  logs.test.ts  logs.ts  optimization-events.test.ts  optimization-events.ts  optimizer.test.ts  optimizer.ts  proxy.test.ts  proxy.ts  system.test.ts  system.ts  tls.test.ts  tls.ts  users.test.ts  users.ts
services/admin-server/src/types/: fastify.d.ts
services/admin-web/: .dockerignore  Dockerfile  index.html  package.json  playwright.config.ts  vite.config.ts
services/admin-web/e2e/: app-layout.spec.ts
services/admin-web/e2e/factories/: cache.factory.ts  dns.factory.ts  optimizer.factory.ts  proxy.factory.ts  tls.factory.ts
services/admin-web/e2e/fixtures/: api-mock.ts  auth-mock.ts  test.ts
services/admin-web/e2e/pages/: auth.spec.ts  cache.spec.ts  dashboard-cache.spec.ts  dashboard.spec.ts  dns.spec.ts  domain-detail.spec.ts  domains.spec.ts  error-boundary.spec.ts  not-found.spec.ts  optimizer.spec.ts  setup.spec.ts  system.spec.ts  users.spec.ts
services/admin-web/e2e/scenarios/: core-flow.spec.ts
services/admin-web/src/: App.tsx  index.css  main.tsx
services/admin-web/src/api/: auth.ts  cache.ts  dns.ts  domain-types.ts  domains.ts  optimizer.ts  proxy.ts  system.ts  tls.ts  users.ts
services/admin-web/src/components/: TlsStatusBadge.tsx
services/admin-web/src/components/auth/: AuthContext.tsx  RequireAuth.tsx  RequireSetup.tsx  auth-context.ts  use-auth.ts
services/admin-web/src/components/dashboard/: BandwidthSavedCard.tsx  ByDomainTable.tsx  BypassRateCard.tsx  CacheHitRateCard.tsx  CacheHitRateChart.tsx  CacheStatsCard.tsx  EdgeHitRateCard.tsx  EntryCountCard.tsx  PopularContentCard.tsx  ProxyStatusCard.tsx  RequestLogTable.tsx  StorageUsageCard.tsx
services/admin-web/src/components/domains/: DomainAlertBanner.tsx  DomainBulkAddDialog.tsx  DomainBulkDeleteDialog.tsx  DomainSummaryCards.tsx  DomainTable.tsx  DomainToolbar.tsx  StatSparkline.tsx
services/admin-web/src/components/error/: ErrorBoundary.tsx
services/admin-web/src/components/layout/: AppLayout.tsx  UserNav.tsx
services/admin-web/src/components/system/: LogViewer.tsx  ServiceStatusCard.tsx
services/admin-web/src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  (+14 more)
services/admin-web/src/hooks/: useAddDomain.ts  useBulkAddDomains.ts  useBulkDeleteDomains.ts  useCachePopular.ts  useCacheSeries.ts  useCacheStats.ts  useDeleteDomain.ts  useDns.ts  useDomain.ts  useDomainHostSummary.ts  useDomainLogs.ts  useDomainOptimization.ts  useDomainPopular.ts  useDomainStats.ts  useDomainSummary.ts  useDomainTls.ts  useDomainTopUrls.ts  useDomainUrlOptimization.ts  useDomains.ts  useLogStream.ts  useOptimizationStats.ts  useOptimizerProfile.ts  useOptimizerProfiles.ts  usePageTitle.ts  useProxyRequests.ts  useProxyStatus.ts  usePurgeCache.ts  usePurgeDomain.ts  useSyncDomain.ts  useTestProxy.ts  useTls.ts  useTlsRenew.ts  useToggleDomain.ts  useUpdateDomain.ts  useUpdateOptimizerProfile.ts
services/admin-web/src/lib/: api.ts  format.ts  stripAnsi.ts  theme.ts  utils.ts
services/admin-web/src/pages/: CachePage.tsx  DashboardPage.tsx  DnsPage.tsx  DomainDetailPage.tsx  DomainsPage.tsx  LoginPage.tsx  OptimizerPage.tsx  SetupPage.tsx  SystemPage.tsx  UsersPage.tsx
services/dns-service/: Cargo.toml  Dockerfile
services/dns-service/src/: dns.rs  grpc.rs  main.rs  metrics.rs
services/optimizer-service/: Cargo.toml  Dockerfile
services/optimizer-service/src/: encoder.rs  grpc.rs  main.rs  optimizer.rs
services/proxy/: Cargo.toml  Dockerfile
services/proxy/src/: coalescer.rs  compress.rs  config.rs  dns.rs  events.rs  lib.rs  main.rs  range.rs  save_tracker.rs  state.rs  tls.rs
services/proxy/src/clients/: admin_client.rs  http.rs  mod.rs  optimizer_client.rs  storage_client.rs  tls_client.rs
services/proxy/tests/: admin_api.rs  cache_handler.rs  cache_integration.rs  proxy_forward.rs
services/proxy/tests/common/: mod.rs
services/storage-service/: Cargo.toml  Dockerfile
services/storage-service/src/: cache.rs  grpc.rs  main.rs
services/tls-service/: Cargo.toml  Dockerfile
services/tls-service/src/: grpc.rs  main.rs  tls.rs
(+21 files in other folders)
