[package]
name = "dns-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dns-service"
path = "src/main.rs"

[dependencies]
cdn-proto       = { path = "../../crates/cdn-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hickory-proto = { version = "0.25", default-features = false, features = ["std"] }
axum.workspace = true
