[package]
name = "optimizer-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "optimizer-service"
path = "src/main.rs"

[dependencies]
cdn-proto              = { path = "../../crates/cdn-proto" }
tokio.workspace        = true
tonic.workspace        = true
prost.workspace        = true
tracing.workspace      = true
tracing-subscriber.workspace = true
axum.workspace         = true
image                  = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
webp                   = "0.3"
oxipng                 = { version = "9", default-features = false, features = ["parallel"] }
rusqlite               = { version = "0.31", features = ["bundled"] }
bytes                  = "1"

[dev-dependencies]
tempfile = "3"
