[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
