[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "proxy"
path = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1"
sha2 = "0.10"
hex = "0.4"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
time = { version = "0.3", features = ["std"] }
hickory-proto = { version = "0.25", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
