[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[lib]
name    = "proxy"
path    = "src/lib.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
cdn-proto       = { path = "../../crates/cdn-proto" }
tokio.workspace = true
axum.workspace  = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic.workspace = true
bytes          = "1"
sha2           = "0.10"
hex            = "0.4"
rustls         = { version = "0.23", features = ["ring"] }
tokio-rustls   = "0.26"
axum-server    = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
moka           = { version = "0.12", features = ["future"] }

[dev-dependencies]
tempfile     = "3"
tower        = { version = "0.5", features = ["util"] }
tokio-stream = { version = "0.1", features = ["net"] }
