[package]
name = "storage-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "storage-service"
path = "src/main.rs"

[dependencies]
cdn-proto   = { path = "../../crates/cdn-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
bytes = "1"
sha2  = "0.10"
hex   = "0.4"

[dev-dependencies]
tempfile = "3"
