[package]
name = "tls-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tls-service"
path = "src/main.rs"

[dependencies]
cdn-proto          = { path = "../../crates/cdn-proto" }
tokio.workspace    = true
tonic.workspace    = true
prost.workspace    = true
tracing.workspace  = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
rcgen              = "0.13"
rustls             = { version = "0.23", features = ["ring"] }
rustls-pemfile     = "2"
time               = { version = "0.3", features = ["std"] }
serde              = { version = "1", features = ["derive"] }
